2007-12-13	Thomas Hempel  <thomas@typo3-unleashed.net>

	* Finished DB compare against stddb/tables.sql (need testing)

2007-12-12	Thomas Hempel  <thomas@typo3-unleashed.net>

	* Bugfix: Invalid call to viewObj
	* Added support for fieldsets in renderMethod "form"
	* Added ability to send forms via AJAX
	* improved DB compare code (Thanks to Francois Suter)

2007-12-11	Thomas Hempel  <thomas@typo3-unleashed.net>

	* Added support for listing and calling methods in new installer
	
2007-12-10  Ingmar Schlecht  <ingmar@typo3.org>

        * (security) Fixed a low-severity SQL injection in the modfunc2 of indexed_search (only exploitable by BE users, and severity limited because addslashes() was already applied to the value - yet not within a quoted string) (Thanks to Henning Pingel for findind the issue and Andreas Otto for the fix)

2007-12-06  Benjamin Mack  <mack@xnos.org>

	* (bugfix) Fixed #1678: limit to language; still can delete and move content element (Thanks to Helmut Hummel)

2007-12-05  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed problems with language files in new installer (typo3/sysext/install)
	* Fixed bug #6903: Translated language files are not loaded
	* Fixed bug #6703: $TCA[table]['ctrl']['hideTable'] not implemented
	* Fixed bug #6888: Disabling some or all controls in "group" field

2007-12-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #6844: DB compare fails

2007-12-04  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #6114: t3lib_extMgm::addToAllTCATypes ignores type 0
	
2007-12-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #6727: Fatal error install tool

2007-12-03  Benjamin Mack  <mack@xnos.org>

	* (cleanup) Fixed #6823: Removed "Disable RTE" checkbox in alt_doc.php

2007-12-02  Dmitry Dulepov  <dmitry@typo3.org>

	* Changed "Clear cache" string to start with upper-case

2007-12-02  Ingo Renner	<ingo@typo3.org>

	* added feature #6868: Enable labels for EM extension configuration, credits Georg Ringer
