@@ -1,3 +1,7 @@
+2007-12-13  Oliver Hader  <oh@inpublica.de>
+
+	* (major) Fixed bug #6924: t3lib_div::readLLXMLfile does not use localized content anymore 
+
 2007-12-13	Thomas Hempel  <thomas@typo3-unleashed.net>
 
 	* Finished DB compare against stddb/tables.sql (need testing)
